# Auto-transfers

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  e -i HEAD~4  pyproject.toml
.github/workflows/: deploy.yml  test_app.yml
production/: gunicorn.service  gunicorn_conf.py  telebot.service  workshop-garage.ru.conf
src/: config.py  run_bot.py
src/accounts/: admin.py  apps.py  models_types.py  permissons.py  signals.py  urls.py  validators.py
src/accounts/migrations/: 0001_initial.py  0002_alter_user_fields.py  0002_alter_user_managers_documentimage_created_and_more.py  0003_add_documentimage_created.py  0003_user_tg_user_id.py  0004_add_admin.py  0005_user_address_user_company_alter_user_role.py  0006_alter_user_address_alter_user_company.py  0006_alter_user_role.py  0007_alter_user_role.py  0008_alter_documentimage_created_and_more.py  0009_alter_documentimage_options_alter_user_options.py
src/accounts/models/: __init__.py  managers.py  user.py
src/accounts/serializers/: custom_image.py  custom_token.py  register.py  user.py
src/accounts/services/: single_resource.py
src/accounts/views/: auth.py  register.py  user.py
src/autotrips/: __init__.py  admin.py  apps.py  celery.py  logging_config.py  signals.py  tasks.py  urls.py  validators.py
src/autotrips/bot/: bot.py  config.py
src/autotrips/bot/handlers/: admin_handlers.py
src/autotrips/bot/keyboards/: admin_keyboards.py
src/autotrips/management/commands/: import_vehicles.py  runbot.py
src/autotrips/migrations/: 0001_initial.py  0002_remove_carphoto_user_remove_documentphoto_user_and_more.py  0003_alter_documentphoto_report.py  0004_vehicletype_vehicleinfo.py  0005_vehicleinfo_approved_by_inspector_and_more.py  0006_vehicleinfo_notified_logistician_by_inspector_and_more.py  0007_remove_acceptencereport_model_and_more.py  0008_vehicleinfo_export_vehicleinfo_prepared_documents.py  0009_vehicletransporter_and_more.py  0010_vehicleinfo_full_acceptance_and_more.py  0011_alter_acceptencereport_acceptance_date_and_more.py  0012_alter_acceptencereport_options_and_more.py  0013_remove_vehicleinfo_notified_logistician_by_inspector_and_more.py  0014_alter_vehicleinfo_vin.py  0015_remove_vehicleinfo_brand_remove_vehicleinfo_model_and_more.py  0016_vehicledocumentphoto.py  0017_alter_vehicledocumentphoto_options_and_more.py
src/autotrips/models/: acceptance_report.py  managers.py  vehicle.py  vehicle_info.py
src/autotrips/serializers/: acceptance_report.py  vehicle_bid.py  vehicle_info.py
src/autotrips/views/: acceptance_report.py  vehicle_bid.py  vehicle_info.py
src/bot/: __init__.py  bot.py  config.py  handlers.py  keyboards.py
src/locale/ru/LC_MESSAGES/: django.mo  django.po
src/project/: celery.py  permissions.py  settings.py  urls.py
src/services/: table_service.py
src/telegram_bot/: apps.py  bot.py
src/telegram_bot/management/commands/: start_bot.py
